platform/gitops/apps/dev/backend-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: apps
  labels:
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: terra
    terra/environment: dev
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-api
      app.kubernetes.io/component: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: terra
        terra/environment: dev
    spec:
      serviceAccount: backend-api
      automountServiceAccountToken: false
      nodeSelector:
        nodepool: apps
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # Run the container process as Linux user ID 101
        runAsGroup: 101 # Run the container process with primary Linux group ID 101.
        fsGroup: 101 # mounted volumes should be accessible by group 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backend-api
          image: nginxinc/nginx-unprivileged:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:  
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: content
          configMap:
            name: backend-api-config
